syntax = "proto3";

package xmaslist;

option go_package = "github.com/simmonmt/xmaslist/proto/list_service";

message ListItemData {
  string name = 1;
  string desc = 2;
  string url =3;
}

message ListItemMetadata {
  int64 created = 1;
  int64 updated = 2;
  int32 claimed_by = 3;
  int32 claimed_when = 4;
}

message ListItemState {
  bool claimed = 1;
}

message ListItem {
  string id = 1;
  int32 version = 2;
  string list_id = 3;

  ListItemData data = 4;
  ListItemState state = 5;
  ListItemMetadata metadata = 6;
}
